[package]
name = "singer_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
singer_scaffold = { version = "*", path = "../singer_scaffold" }
time = { version = "0.3.11", features = ["local-offset", "serde", "serde-well-known"] }
lazy_static = "1.4.0"

[dev-dependencies]
gcp-bigquery-client = { git = "https://github.com/z3z1ma/gcp-bigquery-client.git" }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "sync", "macros"] }
crossbeam = "0.8.2"

[lib]
name = "singer"
path = "src/lib.rs"

[[example]]
name = "target-jsonl"
crate-type = ["bin"]
