[package]
name = "singer_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
time = { version = "0.3.11", features = [
    "local-offset",
    "serde",
    "serde-well-known",
    "macros",
] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
async-trait = "0.1.57"
futures = "0.3.24"

[dev-dependencies]
futures = { version = "0.3.24", features = ["executor"] }
gcp-bigquery-client = { git = "https://github.com/z3z1ma/gcp-bigquery-client.git" }
async-compat = "0.2.1"

[lib]
name = "singer"
path = "src/lib.rs"

[[example]]
name = "target-jsonl"
crate-type = ["bin"]
